--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -10,26 +10,36 @@ html, body {
 
 .map {
   width: 100%;
-  height: 100%;
+  max-height: 600px;
+  margin: 20px;
+  border: solid 1px #337AB7;
+}
+
+.map-row {
+  background-color: #F7F7F7;
 }
 
 .panel {
-  background-color: rgba(255, 255 ,255, 0);
+  background-color: #FFFFFF;
   box-shadow: none;
   -webkit-box-shadow: none;
 }
 
 #fromToInputs {
   padding-top: 25px;
-  padding-bottom: 15px;
+  padding-bottom: 10px;
 }
 
 #fromToSlider {
-  padding-bottom: 15px;
+  padding-bottom: 25px;
 }
 
 #searchinput {
   padding-top: 25px;
+}
+
+#exportbtn {
+  margin-top: 10px;
 }
 
 .searchbtn {
