--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -11,7 +11,7 @@ html, body {
 .map {
   width: 100%;
   max-height: 600px;
-  margin: 20px;
+  margin: 10px;
   border: solid 1px #337AB7;
 }
 
@@ -40,6 +40,15 @@ html, body {
 
 #exportbtn {
   margin-top: 10px;
+}
+
+#resultCounterText {
+  margin-top: 20px;
+  margin-left: 10px;
+}
+
+#resultCounterText label {
+  font-weight: normal;
 }
 
 .searchbtn {
