renamed controller classes according to angular semantic

--- a/app/view/sliderChooseYear.html
+++ b/app/view/sliderChooseYear.html
@@ -1,4 +1,4 @@
-<div ng-controller="YearSlide">
+<div ng-controller="YearSlideCtrl">
   <div class="row center-form" id="fromToInputs">
     <form class="form-inline" role="form">
       <div class="form-group">
