--- a/app/view/toolbarSearchField.html
+++ b/app/view/toolbarSearchField.html
@@ -1,4 +1,4 @@
-<div ng-controller="Search">
+<div ng-controller="SearchCtrl">
   <div class="input-group" id="searchinput">
     <input class="form-control input-sm" type="text" placeholder="Enter keyword" ng-keypress="onKeyPress($event)" ng-model="searchInput" ng-click="onFocus()" ng-blur="onBlur()">
     <span class="input-group-btn searchbtn">
