--- a/app/view/exportButton.html
+++ b/app/view/exportButton.html
@@ -1,4 +1,4 @@
-<div ng-controller="Export">
+<div ng-controller="ExportCtrl">
   <button class="btn btn-primary btn-sm pull-right" id="exportbtn" title="EXPORT" type="button" ng-click="startExport()">
     EXPORT
   </button>
