--- a/app/view/resultCounterText.html
+++ b/app/view/resultCounterText.html
@@ -1,4 +1,4 @@
-<div ng-controller="ResultCounter">
+<div ng-controller="ResultCounterCtrl">
   <div id="resultCounterText">
       <form class="form-inline">
           <div class="form-group">
