use ng-show directive for result counter instead of inputfield

--- a/app/view/resultCounterText.html
+++ b/app/view/resultCounterText.html
@@ -2,8 +2,7 @@
   <div id="resultCounterText">
       <form class="form-inline">
           <div class="form-group">
-              <label>Results for keyword:</label>
-              <span class="input-xlarge uneditable-input" id="resultCounterTextSpan">{{counter}}</span>
+              <p ng-show="counter">Results for keyword: {{counter}}</p>
           </div>
       </form>
   </div>
