--- a/app/view/datePicker.html
+++ b/app/view/datePicker.html
@@ -1,6 +1,7 @@
 <div ng-controller="DatePickerCtrl">
-    <div class="row center-form" id="fromToDateInputs">
+    <div class="row form-inline" id="fromToDateInputs">
         <div class="col-md-6">
+            <label>from:</label>
             <p class="input-group">
                 <input type="text" class="form-control" uib-datepicker-popup ng-model="dts"
                     is-open="startDate.opened" show-button-bar="false" datepicker-options="dateOptions"
@@ -11,6 +12,7 @@
             </p>
         </div>
         <div class="col-md-6">
+            <label>to:</label>
             <p class="input-group">
                 <input type="text" class="form-control" uib-datepicker-popup ng-model="dte"
                     is-open="endDate.opened" show-button-bar="false" datepicker-options="dateOptions"
