--- a/app/view/datePicker.html
+++ b/app/view/datePicker.html
@@ -1,4 +1,4 @@
-<div ng-controller="DatePickerCtrl">
+<div ng-controller="DatePickerController">
     <div class="row form-inline" id="fromToDateInputs">
         <div class="col-md-6">
             <label>from:</label>
