--- a/app/view/datePicker.html
+++ b/app/view/datePicker.html
@@ -1,21 +1,22 @@
 <div ng-controller="DatePickerController">
-    <div class="row" id="fromToDateTextField">
-        <div >
+    <div class="input-group">
+
             <label>Date:</label>
             <input type="text" class="form-control" placeholder="[2000-01-01T00:00:00 TO 2016-12-31T00:00:00]">
-        </div>
-        <div >
+
+
             <span class="input-group-btn searchbtn">
               <button class="btn btn-default btn-sm infobtn" type="button" ng-click="showInfo()">
                 <span class="glyphicon glyphicon-info-sign"></span>
               </button>
             </span>
+
         </div>
     </div>
     <div class="row" id="fromToDateInputs">
         <div class="col-md-6">
+            <label>From:</label>
             <p class="input-group">
-                <label>From:</label>
                 <input type="text" class="form-control" uib-datepicker-popup ng-model="dts"
                     is-open="startDate.opened" show-button-bar="false" datepicker-options="dateOptions"
                     ng-required="true" ng-change="onChangeStartDate()" readonly />
@@ -25,8 +26,8 @@
             </p>
         </div>
         <div class="col-md-6">
+            <label>To:</label>
             <p class="input-group">
-                <label>To:</label>
                 <input type="text" class="form-control" uib-datepicker-popup ng-model="dte"
                     is-open="endDate.opened" show-button-bar="false" datepicker-options="dateOptions"
                     ng-required="true" ng-change="onChangeEndDate()" readonly />
