--- a/app/view/datePicker.html
+++ b/app/view/datePicker.html
@@ -1,31 +1,33 @@
 <div ng-controller="DatePickerController">
-    <div class="input-group">
-
-            <label>Date:</label>
-            <input type="text" class="form-control" placeholder="[2000-01-01T00:00:00 TO 2016-12-31T00:00:00]">
-
-
-            <span class="input-group-btn searchbtn">
+      <div class="row form-group">
+        <div class="col-md-2"/>
+        <div class="col-md-1">
+          <label class=" control-label">Date:</label>
+        </div>
+        <div class="col-md-7">
+            <input class="form-control" id="focusedInput" type="text" value="[2000-01-01T00:00:00 TO 2016-12-31T00:00:00]">
+        </div>
+        <div class="col-md-1 col-md-offset-1">
+          <span class="input-group-btn searchbtn">
               <button class="btn btn-default btn-sm infobtn" type="button" ng-click="showInfo()">
                 <span class="glyphicon glyphicon-info-sign"></span>
               </button>
             </span>
-
         </div>
-    </div>
+      </div>
     <div class="row" id="fromToDateInputs">
-        <div class="col-md-6">
+        <div class="col-md-4 col-md-offset-2">
             <label>From:</label>
             <p class="input-group">
-                <input type="text" class="form-control" uib-datepicker-popup ng-model="dts"
-                    is-open="startDate.opened" show-button-bar="false" datepicker-options="dateOptions"
-                    ng-required="true" ng-change="onChangeStartDate()" readonly />
-                <span class="input-group-btn">
-                    <button type="button" class="btn btn-default" ng-click="openStartDate()"><i class="glyphicon glyphicon-calendar"></i></button>
-                </span>
+              <input type="text" class="form-control" uib-datepicker-popup ng-model="dts"
+                  is-open="startDate.opened" show-button-bar="false" datepicker-options="dateOptions"
+                  ng-required="true" ng-change="onChangeStartDate()" readonly/>
+              <span class="input-group-btn">
+                  <button type="button" class="btn btn-default" ng-click="openStartDate()"><i class="glyphicon glyphicon-calendar"></i></button>
+              </span>
             </p>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4">
             <label>To:</label>
             <p class="input-group">
                 <input type="text" class="form-control" uib-datepicker-popup ng-model="dte"
