--- a/app/view/geospatialFilter.html
+++ b/app/view/geospatialFilter.html
@@ -1,4 +1,4 @@
-<div ng-controller="GeospatialFilterCtrl">
+<div ng-controller="GeospatialFilterController">
   <div class="input-group searchinputfield" id="geospatialfilterinput">
     <input class="form-control input-sm" type="text" placeholder="[-90,-180 TO 90,180]" ng-keypress="onKeyPress($event)" ng-model="geospatialfilterInput" ng-click="onFocus()" ng-blur="onBlur()">
     <span class="input-group-addon">
