--- a/app/view/userFilter.html
+++ b/app/view/userFilter.html
@@ -1,4 +1,4 @@
-<div ng-controller="UserFilterCtrl">
+<div ng-controller="UserFilterController">
   <div class="input-group searchinputfield" id="userfilterinput">
     <input class="form-control input-sm" type="text" placeholder="@user" ng-keypress="onKeyPress($event)" ng-model="userfilterInput" ng-click="onFocus()" ng-blur="onBlur()">
     <span class="input-group-addon">
