--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -88,6 +88,14 @@ code {
   margin-bottom: 5px;
 }
 
+.row-box {
+    background-color: #F7F7F7;
+    border: 1px solid #e5e5e5;
+    border-radius: 9px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
 /*
  * CSS properties of search fields
  */
@@ -105,6 +113,7 @@ code {
 
 .infobtn {
     border: none;
+    background-color: transparent;
 }
 
 .btn:hover {
@@ -256,4 +265,8 @@ rzslider .rz-pointer.rz-active:after {
 
 rzslider .rz-bar.rz-selection {
   background-color: #337AB7;
+}
+
+rzslider .rz-bubble  {
+    bottom: -40px;
 }
