--- a/app/view/userFilter.html
+++ b/app/view/userFilter.html
@@ -1,11 +1,13 @@
 <div ng-controller="UserFilterController">
     <div class="col-md-11">
-        <div class="input-group searchinputfield" id="userfilterinput">
-            <input class="form-control input-sm" type="text" placeholder="@user" ng-keypress="onKeyPress($event)" ng-model="userfilterInput" ng-click="onFocus()" ng-blur="onBlur()">
-            <span class="input-group-addon">
-                <i class="glyphicon glyphicon-search"></i>
-            </span>
-        </div>
+        <form ng-submit="userSearch()">
+            <div class="input-group searchinputfield" id="userfilterinput">
+                <input class="form-control input-sm" type="text" placeholder="@user" ng-model="userfilterInput" ng-click="onFocus()" ng-blur="onBlur()">
+                <span class="input-group-addon">
+                    <i class="glyphicon glyphicon-search"></i>
+                </span>
+            </div>
+        </form>
         </div>
         <div class="col-md-1">
             <span class="input-group-btn searchbtn">
