Show the date search range, inside the all the data range. (#13)
* Show the date search range, inside the all the data range.

* Replace the selected range bar style, with a nice color

--- a/app/components/datepicker/datepicker.html
+++ b/app/components/datepicker/datepicker.html
@@ -49,5 +49,7 @@
 
     <div class="col-md-8 col-md-offset-2">
         <time-histogram barId="inbar"></time-histogram>
-        <rzslider  rz-slider-model="slider.minValue" rz-slider-high="slider.maxValue" rz-slider-options="slider.options"></rzslider>
+        <div style="width: 400px";>
+          <rzslider  rz-slider-model="slider.minValue" rz-slider-high="slider.maxValue" rz-slider-options="slider.options"></rzslider>
+        </div>
     </div>
