--- a/app/components/datepicker/datepicker.css
+++ b/app/components/datepicker/datepicker.css
@@ -1,19 +1,28 @@
+
+/*
+ * Slider
+ */
+rzslider {
+    width: 100%;
+    margin: 0;
+}
+
 rzslider .rz-pointer {
   top: -6px;
   width: 20px;
   height: 20px;
-  background-color: #808080;
+  background-color: #296294;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12);
 }
 
 rzslider .rz-pointer:focus {
     outline: none;
     box-shadow: 0 2px 4px -1px rgba(0,0,0,.2),0 4px 5px 0 rgba(0,0,0,.14),0 1px 10px 0 rgba(0,0,0,.12);
-    background-color: #707070;
+    background-color: #204f77;
 }
 
 rzslider .rz-bar {
-  height: 10px;
+  height: 6px;
 }
 rzslider .rz-pointer:after {
     position: static;
