--- a/app/view/toolbarSearchField.html
+++ b/app/view/toolbarSearchField.html
@@ -1,13 +1,14 @@
-<div ng-controller="SearchController" class="row" style="width:400px;">
-    <div class="col-md-7" style="padding-left: 4px;padding-right: 4px;">
+<div ng-controller="SearchController" style="width:400px;">
+    <div class="col-xs-7" style="padding-left: 4px;padding-right: 4px;">
         <div class="input-group searchinputfield" id="searchinput">
-            <input class="form-control input-sm" type="text" placeholder="Enter keyword" ng-keypress="onKeyPress($event)" ng-model="searchInput" ng-click="onFocus()" ng-blur="onBlur()">
+            <input class="form-control input-sm" type="text" placeholder="Enter keyword" ng-keypress="onKeyPress($event)"
+              ng-model="searchInput" ng-click="onFocus()" ng-blur="onBlur()">
             <span class="input-group-addon">
                 <i class="glyphicon glyphicon-search"></i>
             </span>
          </div>
     </div>
-    <div class="col-md-5" style="padding-left: 4px;padding-right: 4px;">
+    <div class="col-xs-5" style="padding-left: 4px;padding-right: 4px;">
         <span class="searchbtn">
            <button class="btn btn-primary btn-sm" type="button" ng-click="doSearch()">Search</button>
         </span>
@@ -16,7 +17,7 @@
             <button class="btn btn-primary btn-sm" type="button" ng-click="resetSearchInput()">Reset</button>
         </span>
 
-        <span class="searchbtn pull-right">
+        <span class="searchbtn">
             <a href="" class="infobtn" ng-click="showInfo()">
                  <span class="glyphicon glyphicon-info-sign"></span>
             </a>
