--- a/app/view/userFilter.html
+++ b/app/view/userFilter.html
@@ -1,20 +1,20 @@
 <div ng-controller="UserFilterController">
-    <div class="col-md-11">
-        <form ng-submit="userSearch()">
-            <div class="input-group searchinputfield" id="userfilterinput">
-                <input class="form-control input-sm" type="text" placeholder="@user" ng-model="userfilterInput" ng-click="onFocus()" ng-blur="onBlur()">
-                <span class="input-group-addon">
-                    <i class="glyphicon glyphicon-search"></i>
-                </span>
-            </div>
-        </form>
+    <div class="row">
+        <div class="col-xs-11">
+            <form ng-submit="userSearch()">
+                <div class="input-group searchinputfield" id="userfilterinput">
+                    <input class="form-control input-sm" type="text" placeholder="@user" style="display:inline"
+                      ng-model="userfilterInput" ng-click="onFocus()" ng-blur="onBlur()">
+                    <span class="input-group-addon">
+                        <i class="glyphicon glyphicon-search"></i>
+                    </span>
+                </div>
+            </form>
         </div>
-        <div class="col-md-1">
-            <span class="input-group-btn searchbtn">
-                <button class="btn btn-default btn-sm infobtn" type="button" ng-click="showInfo()">
-                    <span class="glyphicon glyphicon-info-sign"></span>
-                </button>
-            </span>
+        <div class="col-xs-1 searchbtn pull-right">
+            <a href="" class="infobtn" ng-click="showInfo()">
+                 <span class="glyphicon glyphicon-info-sign"></span>
+            </a>
         </div>
     </div>
 </div>
