--- a/app/view/mapPopup.html
+++ b/app/view/mapPopup.html
@@ -1,4 +1,4 @@
-<div style="display: none;">
+<div class="hidden">
     <div id="popup" class="ol-popup">
         <a href="#" id="popup-closer" class="ol-popup-closer"></a>
         <div id="popup-content"></div>
