--- a/app/view/userFilter.html
+++ b/app/view/userFilter.html
@@ -3,7 +3,7 @@
         <div class="col-xs-11">
             <form ng-submit="userSearch()">
                 <div class="input-group searchinputfield" id="userfilterinput">
-                    <input class="form-control input-sm" type="text" placeholder="@user" style="display:inline"
+                    <input class="form-control input-sm" type="text" placeholder="@user"
                       ng-model="userfilterInput" ng-click="onFocus()" ng-blur="onBlur()">
                     <span class="input-group-addon">
                         <i class="glyphicon glyphicon-search"></i>
@@ -11,7 +11,7 @@
                 </div>
             </form>
         </div>
-        <div class="col-xs-1 searchbtn pull-right">
+        <div class="col-xs-1 searchbtn pull-left padding-search">
             <a href="" class="infobtn" ng-click="showInfo()">
                  <span class="glyphicon glyphicon-info-sign"></span>
             </a>
