--- a/app/view/toolbarSearchField.html
+++ b/app/view/toolbarSearchField.html
@@ -1,5 +1,5 @@
-<div ng-controller="SearchController" style="width:400px;">
-    <div class="col-xs-7" style="padding-left: 4px;padding-right: 4px;">
+<div ng-controller="SearchController">
+    <div class="col-xs-7 padding-search">
         <div class="input-group searchinputfield" id="searchinput">
             <input class="form-control input-sm" type="text" placeholder="Enter keyword" ng-keypress="onKeyPress($event)"
               ng-model="searchInput" ng-click="onFocus()" ng-blur="onBlur()">
@@ -8,7 +8,7 @@
             </span>
          </div>
     </div>
-    <div class="col-xs-5" style="padding-left: 4px;padding-right: 4px;">
+    <div class="col-xs-5 padding-search">
         <span class="searchbtn">
            <button class="btn btn-primary btn-sm" type="button" ng-click="doSearch()">Search</button>
         </span>
