Fixing and configuring  js-lint for travis

--- a/app/components/tweetlist/tweet.css
+++ b/app/components/tweetlist/tweet.css
@@ -44,3 +44,9 @@ li .tweet {
     line-height: 1.6em;
     color: #8899a6;
 }
+
+.no-info {
+    font-size: 200%;
+    text-align: center;
+    color: #888;
+}
