--- a/app/view/toolbarSearchField.html
+++ b/app/view/toolbarSearchField.html
@@ -1,32 +1,26 @@
 <div ng-controller="SearchController">
-    <div class="col-md-9">
+    <div class="col-xs-7 padding-search">
         <div class="input-group searchinputfield" id="searchinput">
-
-            <input class="form-control input-sm" type="text" placeholder="Enter keyword" ng-keypress="onKeyPress($event)" ng-model="searchInput" ng-click="onFocus()" ng-blur="onBlur()">
-
-                <span class="input-group-addon">
-                  <i class="glyphicon glyphicon-search"></i>
-              </span>
-
-
+            <input class="form-control input-sm" type="text" placeholder="Enter keyword" ng-keypress="onKeyPress($event)"
+              ng-model="searchInput" ng-click="onFocus()" ng-blur="onBlur()">
+            <span class="input-group-addon">
+                <i class="glyphicon glyphicon-search"></i>
+            </span>
          </div>
     </div>
- <div class="col-md-1">
-         <span class="searchbtn">
+    <div class="col-xs-5 padding-search">
+        <span class="searchbtn">
            <button class="btn btn-primary btn-sm" type="button" ng-click="doSearch()">Search</button>
-       </span>
-           </div>
- <div class="col-md-1">
-         <span class="searchbtn">
-         <button class="btn btn-primary btn-sm" type="button" ng-click="resetSearchInput()">Reset</button>
-      </span>
-    </div>
-         <div class="col-md-1">
-            <span class="input-group-btn searchbtn">
-           <button class="btn btn-default btn-sm infobtn" type="button" ng-click="showInfo()">
-             <span class="glyphicon glyphicon-info-sign"></span>
-            </button>
-            </span>
-        </div>
+        </span>
 
+        <span class="searchbtn">
+            <button class="btn btn-primary btn-sm" type="button" ng-click="resetSearchInput()">Reset</button>
+        </span>
+
+        <span class="searchbtn">
+            <a href="" class="infobtn" ng-click="showInfo()">
+                 <span class="glyphicon glyphicon-info-sign"></span>
+            </a>
+        </span>
+    </div>
 </div>
