--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -6,6 +6,7 @@ html, body {
   padding: 0;
   width: 100%;
   height: 100%;
+  background: #f1f1f1;
 }
 
 .map {
@@ -67,6 +68,11 @@ p {
     margin-bottom: 5px;
 }
 
+.padding-search {
+  padding-left: 4px;
+  padding-right: 4px;
+}
+
 /*
  * bootstrap
  */
@@ -83,17 +89,16 @@ code {
     color: #337ab7
 }
 
-.row {
-  margin-top: 5px;
-  margin-bottom: 5px;
+.row-box {
+    background-color: #fff;
+    border-radius: 2px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,.1),0 1px 1px 0 rgba(0,0,0,.14),0 1px 1px -1px rgba(0,0,0,.12);
 }
 
-.row-box {
-    background-color: #F7F7F7;
-    border: 1px solid #e5e5e5;
-    border-radius: 9px;
-    padding-top: 5px;
-    padding-bottom: 5px;
+.export-slider {
+  padding-top:30px;
 }
 
 /*
@@ -236,4 +241,8 @@ code {
 
 .ol-popup-closer:after {
   content: "✖";
+}
+
+.component-padding {
+  padding: 4px;
 }
